# o5m2sqlite

./: .gitignore  Makefile.in  README.md  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac
src/: Makefile.am  Makefile.in  o5m2sqlite.c  segmenter.c  segmenter.h
src/.deps/: o5m2sqlite.Po  segmenter.Po
test/: Makefile.am  Makefile.in  check_segmenter  check_segmenter.c
